[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/Dialog Settings/Scripts/ScoreboardAvailability.gd" type="Script" id=1]
[ext_resource path="res://Assets/MainEditor.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Font/TinyFont.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="ScoreboardAvailability" type="Control"]
margin_right = 400.0
margin_bottom = 50.0
rect_min_size = Vector2( 350, 50 )
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 350, 50 )
custom_styles/panel = SubResource( 1 )

[node name="OptionButton" type="OptionButton" parent="Panel"]
anchor_left = 0.475
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = -9.5
margin_right = 90.0
margin_bottom = 9.5
custom_fonts/font = ExtResource( 3 )
text = "Equals"
items = [ "Smaller", null, false, 0, null, "Equals", null, false, 1, null, "Bigger", null, false, 5, null ]
selected = 1

[node name="SpinBox" type="SpinBox" parent="Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -12.0
margin_right = -24.0
margin_bottom = 12.0
max_value = 10000.0
value = 1.0
align = 1

[node name="LineEdit" type="LineEdit" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 11.0
margin_top = -12.0
margin_right = 149.0
margin_bottom = 12.0
placeholder_text = "Objective Name"

[connection signal="item_selected" from="Panel/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="Panel/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="text_changed" from="Panel/LineEdit" to="." method="_on_LineEdit_text_changed"]
